# agent-chat

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  LICENSE  README.md  check_notifications.ps1  listener.py  poller.py  pumpkin_notifications.jsonl  pumpkin_poller.py  pumpkin_poller_state.json  pyproject.toml  reply.py  send.py  server.py  start.sh  stop.sh
agent_chat/: __init__.py  cli.py  server.py
agent_chat/static/: viewer.html
archive/: agent-chat-iteration_20260711_002205.md  daily-0710_20260711_101822.md  daily-0711_20260712_102652.md  general_20260709_130649.md  general_20260711_095312.md  general_20260711_101817.md  general_20260711_105654.md  general_20260711_111123.md  task-1_20260711_101822.md  test-auto-notify_20260711_101822.md  test-notify_20260711_101822.md  test-notify_20260711_104718.md
scripts/: reply_agent_chat.py
static/: viewer.html
